Update OAuth2LoginSecurityConfig.java
added cors config for deployment